Refactoring analyzer module #2.